--- a/package.json
+++ b/package.json
@@ -11,15 +11,21 @@
   },
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.13.2",
     "@react-three/drei": "^9.66.0",
     "@react-three/fiber": "^8.12.2",
     "framer-motion": "^10.12.4",
     "maath": "^0.5.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-native-extended-stylesheet": "^0.12.0",
     "react-router-dom": "^6.10.0",
+    "react-slideshow-image": "^4.2.1",
     "react-tilt": "^1.0.2",
     "react-vertical-timeline-component": "^3.6.0",
+    "swiper": "^9.3.2",
     "three": "^0.152.0"
   },
   "devDependencies": {
