--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-slideshow-image": "^4.2.1",
     "react-tilt": "^1.0.2",
     "react-vertical-timeline-component": "^3.6.0",
+    "styled-components": "^6.0.0-rc.3",
     "swiper": "^9.3.2",
     "three": "^0.152.0"
   },
