--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "@emailjs/browser": "^3.11.0",
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/material": "^5.13.2",
     "@react-three/drei": "^9.66.0",
     "@react-three/fiber": "^8.12.2",
